--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "uuid": "^7.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -21,7 +22,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "faker": "^4.1.0"
   },
   "eslintConfig": {
     "root": true,
