--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
+    "store": "^2.0.12",
     "uuid": "^7.0.2",
     "vue": "^2.6.11"
   },
